# osxidation

./: .gitignore  Cargo.toml  Makefile  README.md  header.asm  linker.ld
isofiles/boot/grub/: grub.cfg
src/: lib.rs
src/arch/x86_64/: boot.asm  header.asm  linker.ld  long_mode_start.asm
